// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple test case [Array Map $1] =[2, "foo", true, null].Map($1) // => [object Object],[object Object],[object Object],[object Object] 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LBracket",
    "display": "[",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "[",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "2",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "StringLiteral",
    "display": "\\"foo\\"",
    "errors": Array [],
    "hide": false,
    "type": "string",
    "value": "\\"foo\\"",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "BooleanLiteral",
    "display": "true",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": "true",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NullLiteral",
    "display": "null",
    "errors": Array [],
    "hide": false,
    "type": "null",
    "value": "null",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RBracket",
    "display": "]",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "]",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ".",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "Map",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "Map",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LambdaArgumentNumber",
    "display": "$1",
    "errors": Array [],
    "hide": false,
    "type": "Reference",
    "value": "$1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "Array",
    "value": ")",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Array Map] =[2, "foo", true, null].Map(1) // => [object Object],[object Object],[object Object],[object Object] 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LBracket",
    "display": "[",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "[",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "2",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "StringLiteral",
    "display": "\\"foo\\"",
    "errors": Array [],
    "hide": false,
    "type": "string",
    "value": "\\"foo\\"",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "BooleanLiteral",
    "display": "true",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": "true",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NullLiteral",
    "display": "null",
    "errors": Array [],
    "hide": false,
    "type": "null",
    "value": "null",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RBracket",
    "display": "]",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "]",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ".",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "Map",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "Map",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "Array",
    "value": ")",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Array ok] =[2, "foo", true] // => [object Object],[object Object],[object Object] 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LBracket",
    "display": "[",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "[",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "2",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "StringLiteral",
    "display": "\\"foo\\"",
    "errors": Array [],
    "hide": false,
    "type": "string",
    "value": "\\"foo\\"",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "BooleanLiteral",
    "display": "true",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": "true",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RBracket",
    "display": "]",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "]",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Missing closing parenthesis1] =(1 // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [
      Object {
        "message": "Missing closing parenthesis",
        "type": "syntax",
      },
      Object {
        "message": "TODO mismatch token parenthesisExpression",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Missing closing parenthesis1] =(1 // => ✗ 2`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [
      Object {
        "message": "Missing closing parenthesis",
        "type": "syntax",
      },
      Object {
        "message": "TODO mismatch token parenthesisExpression",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Missing closing parenthesis2] =ABS( // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "ABS",
    "errors": Array [
      Object {
        "message": "Miss argument",
        "type": "deps",
      },
      Object {
        "message": "TODO mismatch token FunctionCall",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "ABS",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [
      Object {
        "message": "Missing closing parenthesis",
        "type": "syntax",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Missing closing parenthesis3] =ABS(1 // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "ABS",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "ABS",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [
      Object {
        "message": "Missing closing parenthesis",
        "type": "syntax",
      },
      Object {
        "message": "TODO mismatch token FunctionCall",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Missing closing parenthesis4] =POWER(1, // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "POWER",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "POWER",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [
      Object {
        "message": "Missing closing parenthesis",
        "type": "syntax",
      },
      Object {
        "message": "Parse error: \\"\\"",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [
      Object {
        "message": "Expression count mismatch",
        "type": "syntax",
      },
    ],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [
      Object {
        "message": "Expression count mismatch",
        "type": "syntax",
      },
    ],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Missing closing parenthesis5] =POWER(1,2 // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "POWER",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "POWER",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [
      Object {
        "message": "Missing closing parenthesis",
        "type": "syntax",
      },
      Object {
        "message": "TODO mismatch token FunctionCall",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "2",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Predicate check type] =>=true // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "GreaterThanEqual",
    "display": ">=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ">=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "BooleanLiteral",
    "display": "true",
    "errors": Array [
      Object {
        "message": "Expected number but got boolean",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "boolean",
    "value": "true",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Predicate check type] =>=true // => ✗ 2`] = `
Object {
  "children": Object {
    "Equal": Array [
      Object {
        "endColumn": 1,
        "endLine": 1,
        "endOffset": 0,
        "image": "=",
        "startColumn": 1,
        "startLine": 1,
        "startOffset": 0,
        "tokenType": Object {
          "CATEGORIES": Array [
            Object {
              "CATEGORIES": Array [],
              "PATTERN": /NOT_APPLICABLE/,
              "categoryMatches": Array [
                17,
                18,
                20,
                21,
              ],
              "categoryMatchesMap": Object {
                "17": true,
                "18": true,
                "20": true,
                "21": true,
              },
              "isParent": true,
              "name": "EqualCompareOperator",
              "tokenTypeIdx": 3,
            },
          ],
          "PATTERN": /=/,
          "categoryMatches": Array [],
          "categoryMatchesMap": Object {},
          "isParent": false,
          "name": "Equal",
          "tokenTypeIdx": 17,
        },
        "tokenTypeIdx": 17,
      },
    ],
    "expression": Array [
      Object {
        "children": Object {
          "lhs": Array [
            Object {
              "children": Object {
                "lhs": Array [
                  Object {
                    "children": Object {
                      "rhs": Array [
                        Object {
                          "children": Object {
                            "lhs": Array [
                              Object {
                                "children": Object {
                                  "lhs": Array [
                                    Object {
                                      "children": Object {
                                        "lhs": Array [
                                          Object {
                                            "children": Object {
                                              "lhs": Array [
                                                Object {
                                                  "children": Object {
                                                    "lhs": Array [
                                                      Object {
                                                        "children": Object {
                                                          "lhs": Array [
                                                            Object {
                                                              "children": Object {
                                                                "lhs": Array [
                                                                  Object {
                                                                    "children": Object {
                                                                      "predicateExpression": Array [
                                                                        Object {
                                                                          "children": Object {
                                                                            "CompareOperator": Array [
                                                                              Object {
                                                                                "endColumn": 3,
                                                                                "endLine": 1,
                                                                                "endOffset": 2,
                                                                                "image": ">=",
                                                                                "startColumn": 2,
                                                                                "startLine": 1,
                                                                                "startOffset": 1,
                                                                                "tokenType": Object {
                                                                                  "CATEGORIES": Array [
                                                                                    Object {
                                                                                      "CATEGORIES": Array [],
                                                                                      "PATTERN": /NOT_APPLICABLE/,
                                                                                      "categoryMatches": Array [
                                                                                        16,
                                                                                        19,
                                                                                        22,
                                                                                        23,
                                                                                      ],
                                                                                      "categoryMatchesMap": Object {
                                                                                        "16": true,
                                                                                        "19": true,
                                                                                        "22": true,
                                                                                        "23": true,
                                                                                      },
                                                                                      "isParent": true,
                                                                                      "name": "CompareOperator",
                                                                                      "tokenTypeIdx": 4,
                                                                                    },
                                                                                  ],
                                                                                  "PATTERN": />=/,
                                                                                  "categoryMatches": Array [],
                                                                                  "categoryMatchesMap": Object {},
                                                                                  "isParent": false,
                                                                                  "name": "GreaterThanEqual",
                                                                                  "tokenTypeIdx": 22,
                                                                                },
                                                                                "tokenTypeIdx": 22,
                                                                              },
                                                                            ],
                                                                            "simpleAtomicExpression": Array [
                                                                              Object {
                                                                                "children": Object {
                                                                                  "constantExpression": Array [
                                                                                    Object {
                                                                                      "children": Object {
                                                                                        "BooleanLiteralExpression": Array [
                                                                                          Object {
                                                                                            "children": Object {
                                                                                              "BooleanLiteral": Array [
                                                                                                Object {
                                                                                                  "endColumn": 7,
                                                                                                  "endLine": 1,
                                                                                                  "endOffset": 6,
                                                                                                  "image": "true",
                                                                                                  "startColumn": 4,
                                                                                                  "startLine": 1,
                                                                                                  "startOffset": 3,
                                                                                                  "tokenType": Object {
                                                                                                    "CATEGORIES": Array [],
                                                                                                    "PATTERN": /true\\|false/,
                                                                                                    "categoryMatches": Array [],
                                                                                                    "categoryMatchesMap": Object {},
                                                                                                    "isParent": false,
                                                                                                    "name": "BooleanLiteral",
                                                                                                    "tokenTypeIdx": 44,
                                                                                                  },
                                                                                                  "tokenTypeIdx": 44,
                                                                                                },
                                                                                              ],
                                                                                            },
                                                                                            "name": "BooleanLiteralExpression",
                                                                                          },
                                                                                        ],
                                                                                      },
                                                                                      "name": "constantExpression",
                                                                                    },
                                                                                  ],
                                                                                },
                                                                                "name": "simpleAtomicExpression",
                                                                              },
                                                                            ],
                                                                          },
                                                                          "name": "predicateExpression",
                                                                        },
                                                                      ],
                                                                    },
                                                                    "name": "atomicExpression",
                                                                  },
                                                                ],
                                                              },
                                                              "name": "chainExpression",
                                                            },
                                                          ],
                                                        },
                                                        "name": "multiplicationExpression",
                                                      },
                                                    ],
                                                  },
                                                  "name": "additionExpression",
                                                },
                                              ],
                                            },
                                            "name": "concatExpression",
                                          },
                                        ],
                                      },
                                      "name": "inExpression",
                                    },
                                  ],
                                },
                                "name": "compareExpression",
                              },
                            ],
                          },
                          "name": "equalCompareExpression",
                        },
                      ],
                    },
                    "name": "notExpression",
                  },
                ],
              },
              "name": "combineExpression",
            },
          ],
        },
        "name": "expression",
      },
    ],
  },
  "name": "startExpression",
}
`;

exports[`Simple test case [Predicate check type] =>=true // => ✗ 3`] = `
Object {
  "input": "=>=true",
  "inputImage": "=>=true",
  "newInput": "=>=true",
  "parseImage": "=>=true",
}
`;

exports[`Simple test case [Semicolon 1] = 1; // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Semicolon",
    "display": ";",
    "errors": Array [
      Object {
        "message": "Missing expression",
        "type": "syntax",
      },
      Object {
        "message": "Parse error: \\"\\"",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": ";",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Semicolon 2] = 1; 2 // => 2 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Semicolon",
    "display": ";",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ";",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "2",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Single quote => parseError] = 'hello' // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "other",
    "display": "'hello'",
    "errors": Array [
      Object {
        "message": "Parse error: \\"'hello'\\"",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "'hello'",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Spread operator with no argument] =AVERAGE() // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "AVERAGE",
    "errors": Array [
      Object {
        "message": "Miss argument",
        "type": "deps",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "AVERAGE",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": ")",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [TODO &&&] ="foo" &&& 123 // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "StringLiteral",
    "display": "\\"foo\\"",
    "errors": Array [
      Object {
        "message": "Expected boolean but got string",
        "type": "type",
      },
      Object {
        "message": "Parse error: \\"123\\"",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "string",
    "value": "\\"foo\\"",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "And",
    "display": "&&",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": "&&",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Ampersand",
    "display": "&",
    "errors": Array [
      Object {
        "message": "Expected boolean but got Reference",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "&",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "other",
    "display": "123",
    "errors": Array [
      Object {
        "message": "Parse error: \\"123\\"",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "123",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [TODO 1a1] = 1a1 // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "other",
    "display": "a1",
    "errors": Array [
      Object {
        "message": "Not all input parsed: a1",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "a1",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [TODO chain type 2] =true.START_WITH("123") // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "BooleanLiteral",
    "display": "true",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": "true",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ".",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "START_WITH",
    "errors": Array [
      Object {
        "message": "Expected string but got boolean",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "START_WITH",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "StringLiteral",
    "display": "\\"123\\"",
    "errors": Array [],
    "hide": false,
    "type": "string",
    "value": "\\"123\\"",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": ")",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [TODO chain type 3] =1.START_WITH("123") // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1.",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1.",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "other",
    "display": "START_WITH(\\"123\\")",
    "errors": Array [
      Object {
        "message": "Not all input parsed: START_WITH",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "START_WITH(\\"123\\")",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [TODO chinese] = 中文 // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "other",
    "display": "中文",
    "errors": Array [
      Object {
        "message": "Parse error: \\"中文\\"",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "中文",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [TODO chinese2] =varvarabc中文var // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "varvarabc",
    "errors": Array [
      Object {
        "message": "Unknown function varvarabc",
        "type": "syntax",
      },
      Object {
        "message": "TODO mismatch token FunctionCall",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "varvarabc",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "other",
    "display": "中文var",
    "errors": Array [
      Object {
        "message": "TODO mismatch token FunctionCall",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "中文var",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [TODO missing suffix expression] =1+ // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [
      Object {
        "message": "Missing right expression",
        "type": "syntax",
      },
      Object {
        "message": "Parse error: \\"\\"",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Plus",
    "display": "+",
    "errors": Array [
      Object {
        "message": "Missing right expression",
        "type": "syntax",
      },
    ],
    "hide": false,
    "type": "number",
    "value": "+",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [TODO not is a operator] = nottrue // => false 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Not",
    "display": "not",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": "not",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "BooleanLiteral",
    "display": "true",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": "true",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [TODO predicate ==1] ==1 // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Equal2",
    "display": "==",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "==",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [TODO record number as key] ={1: "a"} // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LBrace",
    "display": "{",
    "errors": Array [
      Object {
        "message": "Missing closing parenthesis",
        "type": "syntax",
      },
      Object {
        "message": "TODO mismatch token recordExpression",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "{",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "other",
    "display": "1:\\"a\\"}",
    "errors": Array [
      Object {
        "message": "TODO mismatch token recordExpression",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "1:\\"a\\"}",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [Without number] = - // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Minus",
    "display": "-",
    "errors": Array [
      Object {
        "message": "Missing number",
        "type": "syntax",
      },
      Object {
        "message": "TODO mismatch token NumberLiteralExpression",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "-",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [array edit] =[1,] // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LBracket",
    "display": "[",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "[",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [
      Object {
        "message": "Expression count mismatch",
        "type": "syntax",
      },
      Object {
        "message": "Parse error: \\"]\\"",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [
      Object {
        "message": "Expression count mismatch",
        "type": "syntax",
      },
    ],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RBracket",
    "display": "]",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "]",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [caret and sign] = -0.123% // => -0.00123 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Minus",
    "display": "-",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "-",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "0.123",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "0.123",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Sign",
    "display": "%",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "%",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [chain type 1] ="foo".START_WITH(123) // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "StringLiteral",
    "display": "\\"foo\\"",
    "errors": Array [],
    "hide": false,
    "type": "string",
    "value": "\\"foo\\"",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Dot",
    "display": ".",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ".",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "START_WITH",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "START_WITH",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "123",
    "errors": Array [
      Object {
        "message": "Expected string but got number",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "number",
    "value": "123",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": ")",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [compare chain] = (1 = 1) > 3 // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [
      Object {
        "message": "Expected number but got boolean",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [
      Object {
        "message": "Expected number but got boolean",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "boolean",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [
      Object {
        "message": "Expected number but got boolean",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": ")",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "GreaterThan",
    "display": ">",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": ">",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "3",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [compare chain] = 1 = 1 > 3 // => false 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "GreaterThan",
    "display": ">",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": ">",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "3",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [compare chain] = 1 > 1 = 3 // => false 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "GreaterThan",
    "display": ">",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": ">",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "3",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [downcase] =if(true, 1+2, "2") // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "if",
    "errors": Array [
      Object {
        "message": "Function if not found",
        "type": "deps",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "if",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "BooleanLiteral",
    "display": "true",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": "true",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Plus",
    "display": "+",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "+",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "2",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "StringLiteral",
    "display": "\\"2\\"",
    "errors": Array [],
    "hide": false,
    "type": "string",
    "value": "\\"2\\"",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ")",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [lex error when parse "hel"lo" => parseError] = "hel"lo" // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "StringLiteral",
    "display": "\\"hel\\"",
    "errors": Array [],
    "hide": false,
    "type": "string",
    "value": "\\"hel\\"",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "other",
    "display": "lo\\"",
    "errors": Array [
      Object {
        "message": "Not all input parsed: lo",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "lo\\"",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [literal1] 1+1 // => 1+1 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "other",
    "display": "1+1",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "1+1",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [literal2] 1+1 asd n,san 中文测试 asdasd // => 1+1 asd n,san 中文测试 asdasd 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "other",
    "display": "1+1 asd n,san 中文测试 asdasd",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "1+1 asd n,san 中文测试 asdasd",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [mul > add] = 1 + 2 * 3 // => 7 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Plus",
    "display": "+",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "+",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "2",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Multi",
    "display": "*",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "*",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "3",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [multiline error 2] =; // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Semicolon",
    "display": ";",
    "errors": Array [
      Object {
        "message": "Missing expression",
        "type": "syntax",
      },
      Object {
        "message": "Parse error: \\";\\"",
        "type": "parse",
      },
      Object {
        "message": "Parse error: \\"\\"",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": ";",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [multiline error 3] =;123 // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Semicolon",
    "display": ";",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ";",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "123",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "123",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [multiline error] =1; 2; // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Semicolon",
    "display": ";",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ";",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "2",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Semicolon",
    "display": ";",
    "errors": Array [
      Object {
        "message": "Missing expression",
        "type": "syntax",
      },
      Object {
        "message": "Parse error: \\"\\"",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": ";",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [multiline function call ok] =ABS(1; 2; (1+3)) // => 4 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "ABS",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "ABS",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Semicolon",
    "display": ";",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ";",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "2",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Semicolon",
    "display": ";",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ";",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Plus",
    "display": "+",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "+",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "3",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": ")",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": ")",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [multiline ok] =1; 2; (1+3) // => 4 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Semicolon",
    "display": ";",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ";",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "2",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Semicolon",
    "display": ";",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ";",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Plus",
    "display": "+",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "+",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "3",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": ")",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [should error] =1. // => 1 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1.",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1.",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [should success] =1.T() // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1.",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1.",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "other",
    "display": "T()",
    "errors": Array [
      Object {
        "message": "Not all input parsed: T",
        "type": "parse",
      },
    ],
    "hide": false,
    "type": "any",
    "value": "T()",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [spread operator] =AVERAGE(1) // => 1 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "AVERAGE",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "AVERAGE",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": ")",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [spread operator] =AVERAGE(1, 2, 3) // => 2 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Function",
    "display": "AVERAGE",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "AVERAGE",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "1",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "1",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "2",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Comma",
    "display": ",",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": ",",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "3",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "3",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": ")",
    "wrapQuote": false,
  },
]
`;

exports[`Simple test case [type check] = 2 * (2 = 4) // => ✗ 1`] = `
Array [
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "2",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Multi",
    "display": "*",
    "errors": Array [],
    "hide": false,
    "type": "number",
    "value": "*",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "LParen",
    "display": "(",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": "(",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "2",
    "errors": Array [
      Object {
        "message": "Expected number but got boolean",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "number",
    "value": "2",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Equal",
    "display": "=",
    "errors": Array [
      Object {
        "message": "Expected number but got boolean",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "boolean",
    "value": "=",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "Space",
    "display": " ",
    "errors": Array [],
    "hide": false,
    "type": "any",
    "value": " ",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "NumberLiteral",
    "display": "4",
    "errors": Array [
      Object {
        "message": "Expected number but got boolean",
        "type": "type",
      },
    ],
    "hide": false,
    "type": "number",
    "value": "4",
    "wrapQuote": false,
  },
  Object {
    "attrs": undefined,
    "code": "RParen",
    "display": ")",
    "errors": Array [],
    "hide": false,
    "type": "boolean",
    "value": ")",
    "wrapQuote": false,
  },
]
`;
